fix spacing on labels/upload buttons

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -38,6 +38,9 @@ div#userProfileName{
   img {
     margin-bottom: 10px;
   }
+  input {
+    margin: 0px;
+  }
 }
 
 .upload-button {
